tests/paczka1/small_fuzzy/12250406.err
Error in line 5: A312 A312 70,8
Error in line 1: GBFV A423 73,0
